<resources>
    <string name="app_name">RolApp</string>
    <string name="mens_titulo">Mensaje</string>
    <string name="loginbtn">Entrar</string>
    <string name="registarbtn">Cambiar Cuenta</string>
    <string name="logout">Log out</string>
    <string name="usuario">Usuario</string>
    <string name="contraseñaUsuario">Contraseña</string>
    <string name="contraseñaRepiteUsuario">Repite Contraseña</string>
    <string name="nuevapartidabtn">Nueva Partida</string>
    <string name="cargarPartida">Cargar Partidas</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">STATS</string>
    <string name="tab_text_2">PJ</string>
    <string name="tab_text_3">MAP</string>
    <string name="tab_text_4">NOTAS</string>
    <string name="search_stats">Stats...</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_partida_nueva">PartidaNuevaActivity</string>
    <string name="codigo_partida">Codigo Partida</string>
    <string name="master">Master</string>
    <string name="jugador">Jugador</string>
    <string name="nombrePj">Nombre PJ</string>
    <string name="edadPj">Edad PJ</string>
    <string name="crearpartidabtn">Crear</string>
    <string name="unirsepartidabtn">Unirse</string>
    <string name="claseGuerrero">Guerrero</string>
    <string name="claseMago">Mago</string>
    <string name="claseCazador">Cazador</string>
    <string name="razaPjRegistrar">Raza</string>
    <string name="edadPjRegistrar">Edad</string>
    <string name="nombrePjRegistrar">Nombre</string>
    <string name="alturaPjRegistrar">Altura</string>
    <string name="honorificoPjRegistrar">Honorifico</string>
    <string name="pesoPjRegistrar">Peso</string>
    <string name="expRestante">Puntos Restantes</string>


</resources>
