<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarActivity">

    <ImageView
        android:id="@+id/fondoReg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        >
    </ImageView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="100dp"
        android:paddingEnd="90dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuario"
            style="@style/textLogin"
            android:layout_marginTop="120dp"/>
        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario"
            style="@style/textLogin"
            android:background="@color/white"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contraseñaUsuario"
            style="@style/textLogin"
            android:layout_marginTop="35dp"/>
        <EditText
            android:id="@+id/etContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contraseñaUsuario"
            style="@style/textLogin"
            android:background="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contraseñaRepiteUsuario"
            style="@style/textLogin"
            android:layout_marginTop="35dp"/>
        <EditText
            android:id="@+id/etRepiteContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contraseñaRepiteUsuario"
            style="@style/textLogin"
            android:background="@color/white"/>


        <Button
            android:id="@+id/btnRegistarCargarUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textLogin"
            android:textColorHint="@color/black"
            android:background="@drawable/btnredondoregistrar"
            android:hint="@string/registarbtn"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>